# gsd-multi-agent

./: .gitignore  GITHUB_SETUP.md  INTEGRATION_GUIDE.md  LICENSE  README.md  SECURITY.md  install.py  push_to_github.bat  push_to_github.sh  pyproject.toml  requirements.txt  verify.py
.github/workflows/: ci.yml
docs/: GSD_ORCHESTRATOR.md  GSD_WORKFLOW_GUIDE.md
scripts/: demo_gsd_workflow.py  demo_orchestrator.py  validate_gsd_system.py
src/: gsd_orchestrator.py
templates/: CLAUDE_TEMPLATE.md  TASK_TOOL_CAPABILITY.md  skills-lock.json
templates/.claude/: settings.local.json
templates/antigravity/: agent_policy.yaml
test_results/: codex_proof.py  codex_proof.txt  minimax_proof.py  minimax_proof.txt
tests/: conftest.py  test_bootstrap_e2e.py  test_gsd_orchestrator.py  test_gsd_workflow.py  test_security_hardening.py
