[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsd-multi-agent"
version = "1.0.1"
description = "Portable multi-agent workflow bootstrap package for Claude Code"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "ruff==0.6.8",
  "mypy==1.11.2",
  "pyyaml==6.0.2",
  "bandit==1.7.9",
]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
